syntax = "proto3";
option go_package = "github.com/rancher/opni/pkg/plugins/apis/apiextensions";

import "google/protobuf/descriptor.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

package apiextensions;

service ManagementAPIExtension {
  rpc Descriptor(google.protobuf.Empty) returns (google.protobuf.ServiceDescriptorProto);
}

service GatewayAPIExtension {
  rpc Configure(CertConfig) returns (GatewayAPIExtensionConfig);
}

service StreamAPIExtension {
  rpc Services(google.protobuf.Empty) returns (ServiceDescriptorList);
}

service UnaryAPIExtension {
  rpc UnaryDescriptor(google.protobuf.Empty) returns (google.protobuf.ServiceDescriptorProto);
}

message CertConfig {
  string ca = 1;
  string caData = 2;
  string cert = 3;
  string certData = 4;
  string key = 5;
  string keyData = 6;
}

message GatewayAPIExtensionConfig {
  string httpAddr = 1;
  repeated RouteInfo routes = 2;
}

message ServiceDescriptorList {
  repeated google.protobuf.ServiceDescriptorProto descriptors = 1;
}

message RouteInfo {
	string method = 1;
	string path = 2;
}