syntax = "proto3";
option go_package = "github.com/rancher/opni/pkg/test/testdata/plugins/ext";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package ext;

service Ext {
  rpc Foo(FooRequest) returns (FooResponse) {
    option (google.api.http) = {
      post: "/foo"
      body: "request"
      additional_bindings {
        get: "/foo"
      }
      additional_bindings {
        put: "/foo"
        body: "request"
      }
      additional_bindings {
        delete: "/foo"
      }
      additional_bindings {
        patch: "/foo"
        body: "request"
      }
    };
  }
}

service Ext2 {
  rpc Foo(FooRequest) returns (FooResponse);
}

message FooRequest {
  string request = 1;
}

message FooResponse {
  string response = 1;
}
